# logai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TODOS.md  UPGRADE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.gstack/: dx-review-report-20260603.md
docs/superpowers/plans/: 2026-05-31-logai-mvp.md  2026-05-31-logai-optimization.md  2026-06-01-logai-watch-implementation.md  2026-06-01-tui-html-implementation.md
docs/superpowers/specs/: 2026-05-31-logai-design.md  2026-05-31-logai-optimization-design.md  2026-05-31-logai-watch-design.md
logai/: Cargo.toml  README.md
logai/src/: cli.rs  main.rs  renderer.rs  types.rs
logai/src/aggregator/: anomaly.rs  bucketer.rs  mod.rs  signature.rs  token_budget.rs
logai/src/ai/: claude.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
logai/src/parser/: json.rs  mod.rs  plain_text.rs  timestamp.rs
pkg/homebrew/: logai.rb
src/: cli.rs  errors.rs  lib.rs  main.rs  renderer.rs  renderer_html.rs  tui.rs  types.rs  watcher.rs
src/aggregator/: anomaly.rs  bucketer.rs  mod.rs  signature.rs
src/ai/: claude.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
src/parser/: json.rs  mod.rs  plain_text.rs  timestamp.rs
tests/: aggregator_tests.rs  ai_tests.rs  html_tests.rs  integration_tests.rs  tui_tests.rs  watcher_tests.rs
